WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273021
[WebGPU] setPipelineState fails when X32_Stencil8 attachment is used in a Stencil8 pipeline
https://bugs.webkit.org/show_bug.cgi?id=273021
Summary
[WebGPU] setPipelineState fails when X32_Stencil8 attachment is used in a Ste...
Mike Wyrzykowski
Reported
2024-04-19 20:52:00 PDT
[WebGPU] setPipelineState fails when X32_Stencil8 attachment is used in a Stencil8 pipeline
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-04-19 20:52:17 PDT
radar://126621251
Mike Wyrzykowski
Comment 2
2024-04-19 21:01:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27548
EWS
Comment 3
2024-04-22 23:58:23 PDT
Committed
277856@main
(b2b40994e9d8): <
https://commits.webkit.org/277856@main
> Reviewed commits have been landed. Closing PR #27548 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug