[WebGPU] setPipelineState fails when X32_Stencil8 attachment is used in a Stencil8 pipeline https://bugs.webkit.org/show_bug.cgi?id=273021 <radar://126621251>

Reviewed by Tadeu Zagallo.

Calling setPipelineState with a Stencil8 format will fail so check
if we have such a mismatch before passing the validation check.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/fuzz-273021-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-273021.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::clearTextureIfNeeded):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::colorDepthStencilTargetsMatch const):

Canonical link: https://commits.webkit.org/277856@main